# Pred_maint_UI_projects

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: main.yaml
.taipy/: version.json
.taipy/version/: f4c77918-9619-418b-b8e7-0b0d4d13b722.json
notebook/: test_requests.ipynb
pages/: root.py
pages/01_Presentation_projet/: Presentation_projet.md  Presentation_projet.py
pages/02_Visualisation/: Visualisation.py
pages/Model/: Model.md  Model.py
pages/Presentation_projet/: ApiRequester.py  Presentation_projet.md  Presentation_projet.py
pages/Visualisation/: Visualisation.md  Visualisation.py
pred_maint_ui_projects/: first_interface.py  mainUI.py  root_page.py  second_interface.py  third_interface.py
