[tool.poetry]
name = "pred-maint-ui-projects"
version = "0.1.0"
description = ""
authors = ["yannick77 <yannick.bodin@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
taipy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
